--- a/arellepyConfig.json
+++ b/arellepyConfig.json
@@ -1,5 +1,5 @@
 {
     "srcDir": "/home/sherif/projects/final/Arelle_git",
     "appDir": "/home/sherif/projects/final/Arelle_app",
-    "env":"app"
+    "env":"src"
 }
